--- a/about.html
+++ b/about.html
@@ -7,19 +7,20 @@
     <meta name="description" content="Content description here">
     <link rel="shortcut icon" href="appicon.png">
     <link href='http://fonts.googleapis.com/css?family=Roboto:100,500' rel='stylesheet' type='text/css'>
-    <link href="base.css" rel="stylesheet" type="text/css">
+    <link href="stylesheet/MyFontsWebfontsKit.css" rel="stylesheet" type="text/css">
+    <link href="stylesheet/base.css" rel="stylesheet" type="text/css">
   </head>
 
   <body style="background:#ecf0f1;margin:0;padding:0;">
     <div style="text-align:center; width:100%; margin:0 auto;">
-      <div style="padding-top:30px; width:100%; height:50px; align:center;">
-        <img src="top_logo.png" width="100" border="0" style="position:relative; top:-15px;">
+      <div style="width:100%; height:50px; align:center;" class="logoContainer">
+        <a href="http://hairstoryapp.com"><span class="logo">HairStory</span></a>
       </div>
       <div style="width:100%; margin:0 auto; margin-top:40px; margin-bottom:120px; ">
       </div>
   	</div>
   	
-  	<div id="container" style="width:960px; margin:0 auto; height:450px; position:relative;">
+  	<div id="container" style="width:960px; margin:0 auto; height:487px; position:relative;">
           <img src="box0_image.png" border="0" style="position:absolute; top:-40px; left:0px; height:600px;">
           <div style="float:left; text-align:left; width:33%;">
             <center>
@@ -37,4 +38,45 @@
              <span class="aboutpageText"><smaller>This is the paragraph about Kyle.</smaller></span>
            </div>
   	</div>
+
+    <div class="boxWrapper" style="background:#FFF;height:100px;">
+        <div class="boxContainer" style="width:75%">
+            <table id="footerTable">
+              <tr>
+                <td class="footerTD" style="width:40%;">
+                  <a href="about.html"><span class="footerLink">ABOUT</span></a>
+                  <a href="#"><span class="footerLink">CONTACT US</span></a>
+                  <a href="#"><span class="footerLink">TERMS OF USE</span></a>
+                </td>
+                <td class="footerTD" style="width:25%;"></td>
+                <td class="footerTD" style="width:35%;">
+                    <!-- AddToAny BEGIN -->
+                    <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
+                    <a class="a2a_dd" href="http://www.addtoany.com/share_save?linkurl=http%3A%2F%2Fwww.hairstoryapp.com%2F&amp;linkname=HairStory"></a>
+                    <a class="a2a_button_email"></a>
+                    <a class="a2a_button_facebook"></a>
+                    <a class="a2a_button_twitter"></a>
+                    <a class="a2a_button_google_plus"></a>
+                    <a class="a2a_button_pinterest"></a>
+                    <a class="a2a_button_reddit"></a>
+                    <a class="a2a_button_tumblr"></a>
+                    <a class="a2a_button_linkedin"></a>
+                    </div>
+                    <script type="text/javascript">
+                    var a2a_config = a2a_config || {};
+                    a2a_config.linkname = "HairStory";
+                    a2a_config.linkurl = "http://www.hairstoryapp.com/";
+                    a2a_config.color_main = "D7E5ED";
+                    a2a_config.color_border = "AECADB";
+                    a2a_config.color_link_text = "333333";
+                    a2a_config.color_link_text_hover = "333333";
+                    </script>
+                    <script type="text/javascript" src="http://static.addtoany.com/menu/page.js"></script>
+                    <!-- AddToAny END -->
+
+                </td>
+              </tr>
+            </table>
+        </div>
+     </div>
   </body>
