--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
   <body style="background:#ecf0f1;margin:0;padding:0;">
     <div style="text-align:center; width:100%; margin:0 auto;">
       <div style="width:100%; height:50px; align:center;" class="logoContainer">
-      	<span class="logo">HairStory</span>
-        <!--<img src="top_logo.png" width="100" border="0" style="position:relative; top:-15px;">-->
+      	<a href="http://hairstoryapp.com"><span class="logo">HairStory</span></a>
       </div>
       <div style="width:100%; margin:0 auto; margin-top:40px; margin-bottom:120px;">
         <div id="container">
