Update menu links and standardize footer navigation

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
       </div>
   	</div>
   	
-  	<div id="container" style="width:960px; margin:0 auto; height:487px; position:relative;">
+  	<div id="container" style="width:960px; margin:0 auto; height:450px; position:relative;">
           <img src="box0_image.png" border="0" style="position:absolute; top:-40px; left:0px; height:600px;">
           <div style="float:left; text-align:left; width:33%;">
             <center>
@@ -39,13 +39,14 @@
            </div>
   	</div>
 
-    <div class="boxWrapper" style="background:#FFF;height:100px;">
+    <div class="boxWrapper" style="background:#FFF; height:100px;">
         <div class="boxContainer" style="width:75%">
             <table id="footerTable">
               <tr>
                 <td class="footerTD" style="width:40%;">
+                  <a href="index.html"><span class="footerLink">HOME</span></a>
                   <a href="about.html"><span class="footerLink">ABOUT</span></a>
-                  <a href="#"><span class="footerLink">CONTACT US</span></a>
+                  <a href="mailto:info@hairstoryapp.com"><span class="footerLink">CONTACT US</span></a>
                   <a href="#"><span class="footerLink">TERMS OF USE</span></a>
                 </td>
                 <td class="footerTD" style="width:25%;"></td>
