Fix footer on index and about

--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
 <!-- BEGIN BODY FOOTER -->
 
       <div class="boxWrapper" style="background:#FFF;height:100px;">
-        <div class="boxContainer" style="width:75%">
-            <table id="footerTable">
+        <div class="boxContainer">
+            <table class="footerTable">
               <tr>
                 <td class="footerTD" style="width:50%;">
                   <a href="index.html"><span class="footerLink">HOME</span></a>
