--- a/about.html
+++ b/about.html
@@ -12,6 +12,8 @@
   </head>
 
   <body style="background:#ecf0f1;margin:0;padding:0;">
+  <div id="pageContainer">
+  <div id="header">
     <div style="text-align:center; width:100%; margin:0 auto;">
       <div style="width:100%; height:50px; align:center;" class="logoContainer">
         <a href="http://hairstoryapp.com"><span class="logo">HairStory</span></a>
@@ -19,7 +21,8 @@
       <div style="width:100%; margin:0 auto; margin-top:40px; margin-bottom:120px; ">
       </div>
   	</div>
-  	
+  </div>
+  <div id="body">
   	<div id="container" style="width:960px; margin:0 auto; height:450px; position:relative;">
           <img src="box0_image.png" border="0" style="position:absolute; top:-40px; left:0px; height:600px;">
           <div style="float:left; text-align:left; width:33%;">
@@ -39,19 +42,21 @@
            </div>
   	</div>
 
-    <div class="boxWrapper" style="background:#FFF; height:100px;">
-        <div class="boxContainer" style="width:75%">
-            <table id="footerTable">
+<!-- BEGIN BODY FOOTER -->
+    <div id="footer">
+      <div class="abFtrWrapper">
+        <div class="abFtrContainer">
+            <table class="footerTable">
               <tr>
-                <td class="footerTD" style="width:40%;">
+                <td class="footerTD" style="width:50%;">
                   <a href="index.html"><span class="footerLink">HOME</span></a>
                   <a href="about.html"><span class="footerLink">ABOUT</span></a>
                   <a href="mailto:info@hairstoryapp.com"><span class="footerLink">CONTACT US</span></a>
                   <a href="#"><span class="footerLink">TERMS OF USE</span></a>
                 </td>
-                <td class="footerTD" style="width:25%;"></td>
-                <td class="footerTD" style="width:35%;">
-                    <!-- AddToAny BEGIN -->
+                <td class="footerTD" style="width:50%;text-align:right;">
+                  <!-- AddToAny BEGIN -->
+                  <div style="float:right;">
                     <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
                     <a class="a2a_dd" href="http://www.addtoany.com/share_save?linkurl=http%3A%2F%2Fwww.hairstoryapp.com%2F&amp;linkname=HairStory"></a>
                     <a class="a2a_button_email"></a>
@@ -73,11 +78,14 @@
                     a2a_config.color_link_text_hover = "333333";
                     </script>
                     <script type="text/javascript" src="http://static.addtoany.com/menu/page.js"></script>
-                    <!-- AddToAny END -->
-
+                  <!-- AddToAny END -->
+                  </div>
                 </td>
               </tr>
             </table>
         </div>
      </div>
+    </div>
+  </div>
   </body>
+</html>
