Add new images to images directory

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
       <div style="width:100%; margin:0 auto; margin-top:40px; margin-bottom:120px;">
         <div id="container">
-          <img src="images/box0_image.png" border="0" style="position:absolute; top:-50px; left:-120px; height:500px; width:auto;">
+          <img src="images/ipad_logo.png" border="0" style="position:absolute; top:20px; left:-100px; height:400px; width:auto;"> <!--Change this-->
             <br />
           <div style="float:right; text-align:right;width:67%;">
             <div>
