Edit vertical spacing

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <div style="float:left;width:68%;vertical-align:middle;text-align:center;margin-top:20px;">
                 <input class="inputFooter" type="email" placeholder="email@address.com"/>
               </div>
-              <div style="float:right;width:28%;vertical-align:middle;text-align:center;margin-top:20px;">
+              <div style="float:right;width:28%;">
                 <a href="#"><div class="actionButtonMini">Get notified!</div></a>
               </div>
             </div>
