--- a/index.html
+++ b/index.html
@@ -19,24 +19,28 @@
       <div style="width:100%; height:50px; align:center;" class="logoContainer">
       	<a href="index.html"><span class="logo">HairStory</span></a>
       </div>
+
       <div style="width:100%; margin:0 auto; margin-top:40px; margin-bottom:120px;">
         <div id="container">
           <img src="images/ipad_logo.png" border="0" style="position:absolute; top:20px; left:-100px; height:400px; width:auto;"> <!--Change this-->
             <br />
-          <div style="float:right; text-align:right;width:67%;">
+          <div style="float:right;text-align:right;width:60%;">
             <div>
-              <span class="homepageMessageTitle">Create, save, and share all your haircut preferences with any <br>haircare professional in seconds</span>
+              <span class="homepageMessageTitle">Create, save, and share all your <br>haircut preferences with any haircare professional in seconds</span>
             </div>
             <br><br>
-         
-            <center>
-              <input class="inputMain" type="email" placeholder="email@address.com"/>
-            	<a href="#">
-                    <div class="actionButton">Get notified when it's ready!</div>
-                 </a><br><br>
-              <span class="homepageMessage">Available in Spring 2014 for web, iOS, and Android</span>
-              <br><div><img src="images/App-store-button.png" class="buttonImg" /> <img src="images/Google-play-button.png" class="buttonImg" /></div>
-             </center>
+            <!-- The div below is has padding on the left for pushing the contents rightward
+              to visual center of standard float right div -->
+            <div style="margin:0 auto;padding-left:60px;">        
+              <center>
+                <input class="inputMain" type="email" placeholder="email@address.com"/>
+              	<a href="#">
+                      <div class="actionButton">Get notified when it's ready!</div>
+                   </a><br><br>
+                <span class="homepageMessage">Available in Spring 2014 for web, iOS, and Android</span>
+                <br><div><img src="images/App-store-button.png" class="buttonImg" /> <img src="images/Google-play-button.png" class="buttonImg" /></div>
+              </center>
+             </div>
            </div>
         </div>
       </div>
