--- a/index.html
+++ b/index.html
@@ -106,6 +106,12 @@
             <div class="boxTableCell">
               <span class="homepageTextTitle">Stay updated</span><br><br>
               <span class="homepageText">Find us on Facebook and Twitter to receive the latest updates on our progress. Sign up now and you'll receive and invite to be one of our first users.</span><br>
+              
+              <div style="text-align:center;vertical-align:middle;float:right;width:100%;min-height:100px;">
+                <a href="#"><img src="images/Facebook-text.png" class="largeButtonImg" style="height:60px;" /></a>
+                <a href="#"><img src="images/Twitter-text-bird.png" class="largeButtonImg" /></a>
+              </div>
+              <br />
               <div style="float:left;width:68%;vertical-align:middle;text-align:center;margin-top:20px;">
                 <input class="inputFooter" type="email" placeholder="email@address.com"/>
               </div>
