--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 
       <div style="width:100%; margin:0 auto; margin-top:40px; margin-bottom:120px;vertical-align: middle;padding-top:25px;padding-bottom:25px;">
         <div id="container">
-          <img class="iPad" src="images/prototypeFinal.png" border="0" style="position:absolute; height:425px; wixdth:550px;"><!--Change this-->
-            <br />
-          <div style="float:right;text-align:right;width:60%;">
+          <div class="headerImgBox">
+            <img class="iPad" src="images/prototypeFinal.png" />
+          </div>
+          <div style="float:right;text-align:right;width:50%;">
             <div>
               <span class="homepageMessageTitle">Create, save, and share all your <br>haircut preferences with any haircare professional in seconds</span>
             </div>
