Mass changes to css structure and header

--- a/index-rf.html
+++ b/index-rf.html
@@ -14,27 +14,29 @@
 <body style="background:#ECF0F1">
   <header class="index">
     <div id="headerLogo">
-
+      <a href="index.html"><span class="logo">HairStory</span></a>
     </div>
     <div id="headerDiv">
 
     </div>
   </header>
+  
+  <div id="content">
+    <div id="div1" class="contentDiv">
 
-  <div id="div1" class="contentDiv">
+    </div>
 
-  </div>
+    <div id="div2" class="contentDiv">
 
-  <div id="div2" class="contentDiv">
+    </div>
 
-  </div>
+    <div id="div3" class="contentDiv">
 
-  <div id="div3" class="contentDiv">
+    </div>
 
-  </div>
+    <div id="div4" class="contentDiv">
 
-  <div id="div4" class="contentDiv">
-
+    </div>
   </div>
 
   <footer class="index">
