--- a/index-rf.html
+++ b/index-rf.html
@@ -17,7 +17,20 @@
       <a href="index.html"><span class="logo">HairStory</span></a>
     </div>
     <div id="headerDiv">
-    <br />
+      <div id="headerDivImg">
+        <img id="ipadImg" src="images/prototypeFinal.png" />
+      </div>
+      <div id="headerDivContent">
+          <span id="headerTagline">Create, save, and share all your haircut preferences with any<br /> haircare professional in seconds</span>
+        <div id="centerInset">
+          <input id="inputMain" type="email" placeholder="email@address.com"/>
+            <a href="#">
+              <div id="actionButton">Get notified when it's ready!</div>
+            </a><br /><br />
+            <span id="insetTagline">Available in Spring 2014 for web, iOS, and Android</span>
+            <br><div><img src="images/App-store-button.png" class="buttonImg" /> <img src="images/Google-play-button.png" class="buttonImg" /></div>
+        </div>
+      </div>
     </div>
   </header>
 
