--- a/index-rf.html
+++ b/index-rf.html
@@ -54,11 +54,38 @@
 
   <footer class="index">
     <nav>
-      <div id="footerLinks">
-
+      <div class="footerLinks">
+        <a href="index.html"><span class="footerLink">HOME</span></a>
+        <a href="about.html"><span class="footerLink">ABOUT</span></a>
+        <a href="mailto:info@hairstoryapp.com"><span class="footerLink">CONTACT US</span></a>
+        <a href="#"><span class="footerLink">TERMS OF USE</span></a>
       </div>
-      <div id="footerShare">
-      
+      <div class="footerShare">
+        <!-- AddToAny BEGIN -->
+          <div style="float:right;">
+            <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
+              <a class="a2a_dd footerShareButton" href="http://www.addtoany.com/share_save?linkurl=http%3A%2F%2Fwww.hairstoryapp.com%2F&amp;linkname=HairStory"></a>
+              <a class="a2a_button_email footerShareButton"></a>
+              <a class="a2a_button_facebook footerShareButton"></a>
+              <a class="a2a_button_twitter footerShareButton"></a>
+              <a class="a2a_button_google_plus footerShareButton"></a>
+              <a class="a2a_button_pinterest footerShareButton"></a>
+              <a class="a2a_button_reddit footerShareButton"></a>
+              <a class="a2a_button_tumblr footerShareButton"></a>
+              <a class="a2a_button_linkedin footerShareButton"></a>
+            </div>
+            <script type="text/javascript">
+              var a2a_config = a2a_config || {};
+              a2a_config.linkname = "HairStory";
+              a2a_config.linkurl = "http://www.hairstoryapp.com/";
+              a2a_config.color_main = "D7E5ED";
+              a2a_config.color_border = "AECADB";
+              a2a_config.color_link_text = "333333";
+              a2a_config.color_link_text_hover = "333333";
+            </script>
+            <script type="text/javascript" src="http://static.addtoany.com/menu/page.js"></script>
+          </div>
+        <!-- AddToAny END -->
       </div>
     </nav>
   </footer>
