Content div css

--- a/index-rf.html
+++ b/index-rf.html
@@ -12,15 +12,16 @@
   </head>
 
 <body>
+
   <header class="index">
-    <div id="headerLogo">
+    <div class="headerLogo">
       <a href="index.html"><span class="logo">HairStory</span></a>
     </div>
     <div id="headerDiv">
       <div id="headerDivImg">
         <img id="ipadImg" src="images/prototypeFinal.png" />
       </div>
-      <div id="headerDivContent">
+      <div id="headerDivBody">
           <span id="headerTagline">Create, save, and share all your haircut preferences with any<br /> haircare professional in seconds</span>
         <div id="centerInset">
           <input id="inputMain" type="email" placeholder="email@address.com"/>
@@ -36,19 +37,36 @@
 
   <div id="content">
     <div id="div1" class="contentDiv">
+      <div class="contentDivImg">
 
+      </div>
+      <div class="contentDivBody">
+        <span class="contentDivBodyTitle">Eliminate your haircut woes</span>
+        <br /><br />
+        <span class="contentDivBodyText">Forget trying to remember and explain that haircut from weeks ago. We help you <b>better communicate</b> your preferences to your haircare provider. 
+              In seconds, save and share your <b>personal preferences</b> to your HairStory profile.<br /></span>
+      </div>
     </div>
 
     <div id="div2" class="contentDiv">
-
+      <div class="contentDivImg">
+      </div>
+      <div class="contentDivBody">
+      </div>
     </div>
 
     <div id="div3" class="contentDiv">
-
+      <div class="contentDivImg">
+      </div>
+      <div class="contentDivBody">
+      </div>
     </div>
 
     <div id="div4" class="contentDiv">
-
+      <div class="contentDivImg">
+      </div>
+      <div class="contentDivBody">
+      </div>
     </div>
   </div>
 
