Img css ongoing

--- a/index-rf.html
+++ b/index-rf.html
@@ -19,7 +19,7 @@
     </div>
     <div id="headerDiv">
       <div id="headerDivImg">
-        <img id="ipadImg" src="images/prototypeFinal.png" />
+        <img src="images/index_prototype_pic1.png" id="img1" />
       </div>
       <div id="headerDivBody">
           <span id="headerTagline">Create, save, and share all your haircut preferences with any<br /> haircare professional in seconds</span>
@@ -38,7 +38,7 @@
   <div id="content">
     <div id="div1" class="contentDiv">
       <div class="contentDivImg">
-
+        <img src="images/index_prototype_pic2.png" id="img2" />
       </div>
       <div class="contentDivBody">
         <span class="contentDivBodyTitle">Eliminate your haircut woes</span>
@@ -50,22 +50,34 @@
 
     <div id="div2" class="contentDiv">
       <div class="contentDivImg">
+        <img src="images/index_prototype_pic3.png" id="img3" />
       </div>
       <div class="contentDivBody">
+        <span class="contentDivBodyTitle">Salons & Barbershops</span>
+        <br /><br />
+        <span class="contentDivBodyText">With your clients' <b>hair profiles</b> in hand, data comes to life helping to bridge the <b>communication gap</b> between you and your customers. We present your clients' preferences to you with just the right level of detail - photos, guards, cut lengths, custom styles, and more! </span>
       </div>
     </div>
 
     <div id="div3" class="contentDiv">
       <div class="contentDivImg">
+        <img src="images/index_prototype_pic4.png" id="img4" />
       </div>
       <div class="contentDivBody">
+        <span class="contentDivBodyTitle">Customers</span>
+        <br /><br />
+        <span class="contentDivBodyText">Create your profile with our easy to use app to share with your haircare professional. Take <b>photos</b> after each visit to create a <b>personal catalog</b> of past looks so you never have to explain what you liked a month ago.</span>
       </div>
     </div>
 
     <div id="div4" class="contentDiv">
       <div class="contentDivImg">
+        <img src="images/index_prototype_pic5.png" id="img5" />
       </div>
       <div class="contentDivBody">
+        <span class="contentDivBodyTitle">Stay updated</span>
+        <br /><br />
+        <span class="contentDivBodyText">Find us on Facebook and Twitter to receive the latest updates on our progress. Sign up now and you'll receive and invite to be one of our first users.</span>
       </div>
     </div>
   </div>
