--- a/index-rf.html
+++ b/index-rf.html
@@ -38,7 +38,7 @@
   <div id="content">
     <div id="div1" class="contentDiv">
       <div class="contentDivImg">
-        <img src="images/index_prototype_pic2.png" id="img2" />
+        <img src="images/index_prototype_pic2.png" class="imgContent" />
       </div>
       <div class="contentDivBody">
         <span class="contentDivBodyTitle">Eliminate your haircut woes</span>
@@ -50,7 +50,7 @@
 
     <div id="div2" class="contentDiv">
       <div class="contentDivImg">
-        <img src="images/index_prototype_pic3.png" id="img3" />
+        <img src="images/index_prototype_pic3.png" class="imgContent" />
       </div>
       <div class="contentDivBody">
         <span class="contentDivBodyTitle">Salons & Barbershops</span>
@@ -61,7 +61,7 @@
 
     <div id="div3" class="contentDiv">
       <div class="contentDivImg">
-        <img src="images/index_prototype_pic4.png" id="img4" />
+        <img src="images/index_prototype_pic4.png" class="imgContent" />
       </div>
       <div class="contentDivBody">
         <span class="contentDivBodyTitle">Customers</span>
@@ -72,7 +72,7 @@
 
     <div id="div4" class="contentDiv">
       <div class="contentDivImg">
-        <img src="images/index_prototype_pic5.png" id="img5" />
+        <img src="images/index_prototype_pic5.png" class="imgContent" />
       </div>
       <div class="contentDivBody">
         <span class="contentDivBodyTitle">Stay updated</span>
