Troubleshoot footer bug

--- a/index-rf.html
+++ b/index-rf.html
@@ -82,7 +82,7 @@
     </div>
   </div>
 
-  <footer class="index">
+  <footer>
     <nav>
       <div class="footerLinks">
         <a href="index.html"><span class="footerLink">HOME</span></a>
@@ -90,6 +90,7 @@
         <a href="mailto:info@hairstoryapp.com"><span class="footerLink">CONTACT US</span></a>
         <a href="#"><span class="footerLink">TERMS OF USE</span></a>
       </div>
+    </nav>
       <div class="footerShare">
         <!-- AddToAny BEGIN -->
           <div style="float:right;">
@@ -117,7 +118,6 @@
           </div>
         <!-- AddToAny END -->
       </div>
-    </nav>
   </footer>
 
 </body>
