Fix typo, add hyperlink color, add charcoal color

--- a/index-rf.html
+++ b/index-rf.html
@@ -77,7 +77,13 @@
       <div class="contentDivBody">
         <span class="contentDivBodyTitle">Stay updated</span>
         <br /><br />
-        <span class="contentDivBodyText">Find us on Facebook and Twitter to receive the latest updates on our progress. Sign up now and you'll receive and invite to be one of our first users.</span>
+        <span class="contentDivBodyText">
+          Find us on 
+          <a href="#">Facebook</a>
+          and
+          <a href="http://twitter.com/hairstoryapp" target="_blank">Twitter</a>
+          to receive the latest updates on our progress. Sign up now and you'll receive an invite to be one of our first users.
+        </span>
       </div>
     </div>
   </div>
