Change headerDivBody css units to em

--- a/index-rf.html
+++ b/index-rf.html
@@ -24,12 +24,12 @@
       <div id="headerDivBody">
           <span id="headerTagline">Create and share all your haircut preferences with any haircare professional in seconds</span>
         <div id="centerInset">
-          <input id="inputMain" type="email" placeholder="email@address.com"/>
+          <input id="inputMain" type="email" placeholder="email@address.com" />
             <a href="#">
               <div id="actionButton">Get notified when it's ready!</div>
-            </a><br /><br />
+            </a>
             <span id="insetTagline">Available in Spring 2014 for web, iOS, and Android</span>
-            <br><div><img src="images/App-store-button.png" class="buttonImg" /> <img src="images/Google-play-button.png" class="buttonImg" /></div>
+            <div id="buttonImgWrapper"><img src="images/App-store-button.png" class="buttonImg" /> <img src="images/Google-play-button.png" class="buttonImg" /></div>
         </div>
       </div>
     </div>
