Add inputMini and actionButtonMini

--- a/index-rf.html
+++ b/index-rf.html
@@ -84,6 +84,11 @@
           <a href="http://twitter.com/hairstoryapp" target="_blank">Twitter</a>
           to receive the latest updates on our progress. Sign up now and you'll receive an invite to be one of our first users.
         </span>
+        <br />
+        <input class="inputMini" type="email" placeholder="email@address.com" />
+        <a href="#">
+         <span class="actionButtonMini">Get notified!</span>
+        </a>
       </div>
     </div>
   </div>
